--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
 		"LICENSE",
 		"README.md"
 	],
+	"exports": {
+		"require": "./dist/index.js",
+		"import": "./dist/index.mjs",
+		"default": "./dist/index.js"
+	},
 	"scripts": {
 		"link": "npm link",
 		"build": "rm -rf dist && run-s build:*",
