--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "commonjs",
 	"types": "dist/index.d.ts",
 	"main": "dist/index.js",
-	"module": "dist/index.js",
+	"module": "dist/index.mjs",
 	"browser": {
 		".": "dist/index.mjs",
 		"crypto": "crypto-js"
@@ -15,11 +15,6 @@
 		"LICENSE",
 		"README.md"
 	],
-	"exports": {
-		"require": "./dist/index.cjs",
-		"import": "./dist/index.js",
-		"default": "./dist/index.js"
-	},
 	"scripts": {
 		"link": "npm link",
 		"build": "rm -rf dist && run-s build:*",
