--- a/.github/workflows/npm-publish-beta.yml
+++ b/.github/workflows/npm-publish-beta.yml
@@ -14,12 +14,13 @@ jobs:
 
     steps:
     - name: "checkout"
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: "setup node"
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version: '14'
+        registry-url: 'https://registry.npmjs.org'
 
     - run: npm i semver-compare-cli
 
@@ -52,10 +53,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "checkout"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: "setup node"
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '14'
           registry-url: 'https://registry.npmjs.org'
@@ -68,6 +69,6 @@ jobs:
         run: npm run build
 
       - name: "publish"
-        run: npm publish --access public --tag beta
+        run: npm publish --access public --tag beta --greater-version-only
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
