--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "esnext",
     "moduleResolution": "Node",
+    "esModuleInterop": true,
     "resolveJsonModule": true,
     "noImplicitReturns": true,
     "noUnusedLocals": false,
@@ -10,7 +11,11 @@
     "declaration": true,
     "strict": true,
     "target": "es2017",
-    "allowJs": true
+    "allowJs": true,
+    "lib": [
+      "es6",
+      "dom"
+    ]
   },
   "compileOnSave": true,
   "include": [
