--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,6 +29,7 @@ jobs:
       - name: "publish"
         # run: npm publish --access public # old
         run: |
+          npm config set registry https://registry.npmjs.org/
           PKG_VERSION_LOCAL=`cat package.json | jq -r '.version'`
           npm dist-tag add algonaut.js@$PKG_VERSION_LOCAL latest
         env:
