--- a/.github/workflows/npm-publish-beta.yml
+++ b/.github/workflows/npm-publish-beta.yml
@@ -31,7 +31,7 @@ jobs:
         SHOULD_PUBLISH=0
         PKG_VERSION_LOCAL=`cat package.json | jq -r '.version'`
         echo 'local pkg: '$PKG_VERSION_LOCAL
-        PKG_VERSION_PUBLISHED=`npm view algonaut.js@beta version`
+        PKG_VERSION_PUBLISHED=`npm view algonautjs@beta version`
         echo 'beta pkg: '$PKG_VERSION_PUBLISHED
         npx semver-compare $PKG_VERSION_LOCAL gt $PKG_VERSION_PUBLISHED && SHOULD_PUBLISH=1
         echo 'publish beta?: '$SHOULD_PUBLISH
