--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "algonaut.js",
-	"version": "0.1.47",
+	"version": "0.1.48",
 	"description": "algonaut.js is a simplified Algorand transaction library built specifically for Browsers and Front End Development",
 	"type": "commonjs",
 	"types": "dist/index.d.ts",
@@ -23,10 +23,11 @@
 				"default": "./dist/index.mjs"
 			},
 			"default": "./dist/index.mjs",
-			"require": "./dist/cjs/index.js",
-			"node": "./dist/cjs/index.js",
+			"require": "./dist/index.cjs",
+			"node": "./dist/index.cjs",
 			"import": "./dist/index.mjs"
-		}
+		},
+		"./AlgonautCJS": "./dist/cjs/index.js"
 	},
 	"files": [
 		"dist/*",
