point to cjs as main

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "algonaut.js",
-	"version": "0.1.50",
+	"version": "0.1.51",
 	"description": "algonaut.js is a simplified Algorand transaction library built specifically for Browsers and Front End Development",
 	"type": "commonjs",
 	"types": "dist/index.d.ts",
-	"main": "dist/index.js",
+	"main": "dist/index.cjs",
 	"module": "dist/index.mjs",
 	"browser": {
 		".": "dist/index.mjs",
