--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,6 +31,6 @@ jobs:
         run: |
           npm config set registry https://registry.npmjs.org/
           PKG_VERSION_LOCAL=`cat package.json | jq -r '.version'`
-          npm dist-tag add algonaut.js@$PKG_VERSION_LOCAL latest
+          npm dist-tag add @thencc/algonautjs@$PKG_VERSION_LOCAL latest
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
