--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "algonaut.js",
-	"version": "0.1.56",
-	"description": "algonaut.js is a simplified Algorand transaction library built specifically for Browsers and Front End Development",
+	"name": "@thencc/algonautjs",
+	"version": "0.1.57",
+	"description": "AlgonautJS is a simplified Algorand transaction library built specifically for Browsers and Front End Development",
 	"type": "commonjs",
 	"types": "dist/index.d.ts",
 	"main": "dist/index.cjs",
