--- a/tests/.env.sample
+++ b/tests/.env.sample
@@ -1,8 +1,8 @@
 ENV="testnet"
 
-BASE_SERVER="https://testnet-algorand.api.purestake.io/ps2"
-INDEX_SERVER="https://testnet-algorand.api.purestake.io/idx2"
-API_TOKEN="123456789"
-API_TOKEN_HEADER="X-API-Key"
-PORT=""
-LEDGER="TestNet"
+NCC_BASE_SERVER="https://testnet-algorand.api.purestake.io/ps2"
+NCC_INDEX_SERVER="https://testnet-algorand.api.purestake.io/idx2"
+NCC_API_TOKEN="123456789"
+NCC_API_TOKEN_HEADER="X-API-Key"
+NCC_PORT=""
+NCC_LEDGER="TestNet"
