--- a/tests/Taskfile.yaml
+++ b/tests/Taskfile.yaml
@@ -48,6 +48,10 @@ tasks:
       - test:init-node-ts-esm
       - test:init-node-js-cjs
       - test:init-node-js-esm
+      - test:init-node-js-esm
+      - test:init-browser-esm-relative
+      - test:init-browser-esm-skypack
+      - test:init-browser-esm-vue
     cmds:
       - echo "all tests completed OK!"
 
@@ -77,9 +81,9 @@ tasks:
     cmds:
       - npm run test
 
-  test:init-browser-js-skypack:
+  test:init-browser-esm-relative:
     silent: false
-    dir: init-browser-js-skypack
+    dir: init-browser-esm-relative
     cmds:
       - |
         npm run dev &
@@ -88,9 +92,20 @@ tasks:
         npm run test
       - echo 'done'
 
-  test:init-browser-vue-vite:
+  test:init-browser-esm-skypack:
+    silent: false
+    dir: init-browser-esm-skypack
+    cmds:
+      - |
+        npm run dev &
+        sleep 1 &
+        wait &
+        npm run test
+      - echo 'done'
+
+  test:init-browser-esm-vue:
     # silent: false
-    dir: init-browser-vue-vite
+    dir: init-browser-esm-vue
     cmds:
       - |
         npm run dev &
