--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 	},
 	"devDependencies": {
 		"@types/crypto-js": "^4.1.1",
+		"@types/node": "^18.7.8",
 		"@types/superagent": "^4.1.15",
 		"@typescript-eslint/eslint-plugin": "^5.13.0",
 		"@typescript-eslint/parser": "^5.13.0",
@@ -76,7 +77,7 @@
 		"ts-node": "^10.7.0",
 		"typedoc": "^0.22.12",
 		"typescript": "^4.6.2",
-		"vite": "^2.8.6"
+		"vite": "^3.0.9"
 	},
 	"prettier": {
 		"singleQuote": true,
