--- a/.github/workflows/npm-publish-beta.yml
+++ b/.github/workflows/npm-publish-beta.yml
@@ -62,11 +62,19 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           # creates an .npmrc
 
+      - name: "setup pnpm"
+        uses: pnpm/action-setup@v2.2.2
+        with:
+          version: 7.9.3
+          # auto install on use
+          run_install: |
+              args: [--frozen-lockfile, --strict-peer-dependencies]
+
       - name: "install"
         run: npm ci
 
       - name: "build"
-        run: npm run build
+        run: pnpm run build
 
       - name: "publish"
         run: |
