--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"build:esm": "node ./esbuild.esm.js",
 		"build:types": "tsc --emitDeclarationOnly --outDir dist",
 		"build:docs": "npx typedoc",
-		"test": "node test/test.js",
+		"test": "jest",
 		"tests": "task prepare-tests && task tests",
 		"xbuild-test": "vite build test",
 		"xdev": "vite serve test --port 8891"
@@ -61,6 +61,7 @@
 		"tslib": "^2.3.1"
 	},
 	"devDependencies": {
+		"@babel/preset-typescript": "^7.18.6",
 		"@types/crypto-js": "^4.1.1",
 		"@types/node": "^18.7.8",
 		"@types/superagent": "^4.1.15",
@@ -73,9 +74,12 @@
 		"eslint-config-typescript": "^3.0.0",
 		"eslint-plugin-import": "^2.25.4",
 		"eslint-plugin-prettier": "^4.0.0",
+		"jest": "^29.1.1",
+		"jsdom": "^20.0.0",
 		"node-testing-server": "^1.5.2",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.5.1",
+		"ts-jest": "^29.0.2",
 		"ts-node": "^10.7.0",
 		"typedoc": "^0.22.12",
 		"typescript": "^4.6.2",
