--- a/.github/workflows/npm-publish-beta.yml
+++ b/.github/workflows/npm-publish-beta.yml
@@ -68,7 +68,7 @@ jobs:
           version: 7.9.3
           # auto install on use
           run_install: |
-              args: [--strict-peer-dependencies]
+              args: [--no-frozen-lockfile, --strict-peer-dependencies]
 
       - name: "build"
         run: pnpm run build
