added app tests, #39

--- a/tests/.env.sample
+++ b/tests/.env.sample
@@ -6,3 +6,4 @@ NCC_API_TOKEN="123456789"
 NCC_API_TOKEN_HEADER="X-API-Key"
 NCC_PORT=""
 NCC_LEDGER="TestNet"
+ALGONAUT_TEST_MNEMONIC="Put your mnemonic here"
