--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "strict": true,
     "target": "es2017",
     "allowJs": true,
+    "skipLibCheck": true,
     "lib": [
       "es6",
       "dom"
@@ -22,7 +23,7 @@
     "src"
   ],
   "exclude": [
-     "src/contracts",
-     "src/algo.config.ts"
- ]
+    "src/contracts",
+    "src/algo.config.ts"
+  ]
 }
