--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"node-testing-server": "^1.5.2",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.5.1",
+		"sass": "^1.55.0",
 		"ts-jest": "^29.0.2",
 		"ts-node": "^10.7.0",
 		"typedoc": "^0.23.16",
