--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@thencc/algonautjs",
-	"version": "0.2.3",
+	"version": "0.2.4",
 	"description": "AlgonautJS is a simplified Algorand transaction library built specifically for Browsers and Front End Development",
 	"type": "commonjs",
 	"types": "dist/index.d.ts",
@@ -25,6 +25,7 @@
 	"scripts": {
 		"link": "npm link",
 		"link-pnpm": "pnpm link --global",
+		"link-w3h": "pnpm link @thencc/web3-wallet-handler --global",
 		"build": "rm -rf dist && run-s build:*",
 		"build:cjs": "node ./esbuild.cjs.js",
 		"build:esm": "node ./esbuild.esm.js",
@@ -47,6 +48,7 @@
 	},
 	"dependencies": {
 		"@json-rpc-tools/utils": "^1.7.6",
+		"@thencc/web3-wallet-handler": "^0.0.3",
 		"algosdk": "^1.21.0",
 		"base32-encode": "^2.0.0",
 		"buffer": "^6.0.3",
@@ -70,6 +72,7 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"jest": "^29.1.1",
 		"jsdom": "^20.0.0",
+		"node-stdlib-browser": "^1.2.0",
 		"node-testing-server": "^1.5.2",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.5.1",
