--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@thencc/algonautjs",
-	"version": "0.2.9",
+	"version": "0.2.10",
 	"description": "AlgonautJS is a simplified Algorand transaction library built specifically for Browsers and Front End Development",
 	"type": "commonjs",
 	"types": "dist/index.d.ts",
@@ -23,6 +23,7 @@
 		"README.md"
 	],
 	"scripts": {
+		"init": "pnpm i --no-optional",
 		"link": "npm link",
 		"link-pnpm": "pnpm link --global",
 		"link-w3h": "pnpm link @thencc/web3-wallet-handler --global",
@@ -48,7 +49,7 @@
 	},
 	"dependencies": {
 		"@json-rpc-tools/utils": "^1.7.6",
-		"@thencc/web3-wallet-handler": "^0.0.8",
+		"@thencc/web3-wallet-handler": "^0.0.15",
 		"algosdk": "^1.21.0",
 		"base32-encode": "^2.0.0",
 		"buffer": "^6.0.3",
