--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"tslib": "^2.3.1"
 	},
 	"devDependencies": {
+		"@jest/globals": "^29.4.3",
 		"@types/node": "^18.13.0",
 		"@types/superagent": "^4.1.15",
 		"@typescript-eslint/eslint-plugin": "^5.13.0",
