--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@thencc/algonautjs",
-	"version": "0.2.100",
+	"version": "0.2.101",
 	"description": "AlgonautJS is a simplified Algorand transaction library built specifically for Browsers and Front End Development",
 	"type": "commonjs",
 	"types": "dist/index.d.ts",
@@ -38,16 +38,22 @@
 		"url": "git://github.com/thencc/algonautjs"
 	},
 	"dependencies": {
-		"@thencc/web3-wallet-handler": "^0.0.143",
+		"@thencc/web3-wallet-handler": "^0.0.148",
 		"algosdk": "^2.1.0",
 		"buffer": "^6.0.3",
 		"tslib": "^2.3.1"
+	},
+	"optionalDependencies": {
+		"@blockshake/defly-connect": "^1.1.1",
+		"@perawallet/connect": "^1.1.1",
+		"@randlabs/myalgo-connect": "^1.4.2",
+		"@thencc/inkey-client-js": "^0.0.8"
 	},
 	"devDependencies": {
 		"@blockshake/defly-connect": "^1.1.1",
 		"@perawallet/connect": "^1.1.1",
 		"@randlabs/myalgo-connect": "^1.4.2",
-		"@thencc/inkey-client-js": "^0.0.2",
+		"@thencc/inkey-client-js": "^0.0.8",
 		"@jest/globals": "^29.4.3",
 		"@types/node": "^18.13.0",
 		"@types/superagent": "^4.1.15",
