--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
 	"name": "@thencc/algonautjs",
-	"version": "0.2.113",
+	"version": "0.2.114",
 	"description": "AlgonautJS is a simplified Algorand transaction library built specifically for Browsers and Front End Development",
 	"type": "module",
 	"types": "dist/index.d.ts",
-	"module": "dist/index.esm.js",
-	"main": "dist/index.cjs.js",
-	"browser": "dist/index.esm.js",
+	"module": "dist/index.mjs",
+	"main": "dist/index.cjs",
+	"browser": "dist/index.mjs",
+	"exports": {
+		"import": "./dist/index.mjs",
+		"require": "./dist/index.cjs",
+		"default": "./dist/index.mjs",
+		"types": "./dist/index.d.ts"
+	},
 	"files": [
 		"dist/*",
 		"LICENSE",
