--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
 	"main": "dist/index.cjs",
 	"browser": "dist/index.mjs",
 	"exports": {
-		"node": "./dist/index.cjs",
-		"require": "./dist/index.cjs",
+		"types": "./dist/index.d.ts",
 		"import": "./dist/index.mjs",
-		"types": "./dist/index.d.ts"
+		"require": "./dist/index.cjs",
+		"node": "./dist/index.cjs"
 	},
 	"files": [
 		"dist/*",
