updated pkgs + removed utils export (moved everything into the main Algonaut inst)

--- a/package.json
+++ b/package.json
@@ -34,7 +34,12 @@
 		"algo",
 		"algorand",
 		"algonaut",
-		"algosdk"
+		"algosdk",
+		"javascript",
+		"js",
+		"typescript",
+		"ts",
+		"frontend"
 	],
 	"author": "Aubrey Anderson, Delwin Campbell, NCC",
 	"license": "MIT",
@@ -43,46 +48,44 @@
 		"url": "git://github.com/thencc/algonautjs"
 	},
 	"dependencies": {
-		"@thencc/any-wallet": "^0.1.22",
-		"algosdk": "^2.1.0",
-		"buffer": "^6.0.3",
-		"tslib": "^2.3.1"
+		"@thencc/any-wallet": "^0.1.23",
+		"algosdk": "^2.2.0",
+		"buffer": "^6.0.3"
 	},
 	"optionalDependencies": {
 		"@blockshake/defly-connect": "^1.1.2",
-		"@perawallet/connect": "^1.2.0",
+		"@perawallet/connect": "^1.2.3",
 		"@randlabs/myalgo-connect": "^1.4.2",
-		"@thencc/inkey-client-js": "^0.0.15"
+		"@thencc/inkey-client-js": "^0.0.16"
 	},
 	"devDependencies": {
 		"@blockshake/defly-connect": "^1.1.2",
+		"@jest/globals": "^29.5.0",
 		"@perawallet/connect": "^1.2.0",
 		"@randlabs/myalgo-connect": "^1.4.2",
 		"@thencc/inkey-client-js": "^0.0.15",
-		"@jest/globals": "^29.4.3",
-		"@types/node": "^18.13.0",
-		"@types/superagent": "^4.1.15",
-		"@typescript-eslint/eslint-plugin": "^5.13.0",
-		"@typescript-eslint/parser": "^5.13.0",
-		"dotenv": "^16.0.0",
-		"esbuild": "^0.14.27",
-		"eslint": "^8.10.0",
-		"eslint-config-prettier": "^8.5.0",
+		"@types/node": "^18.16.5",
+		"@typescript-eslint/eslint-plugin": "^5.59.2",
+		"@typescript-eslint/parser": "^5.59.2",
+		"dotenv": "^16.0.3",
+		"esbuild": "^0.14.54",
+		"eslint": "^8.40.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-config-typescript": "^3.0.0",
-		"eslint-plugin-import": "^2.25.4",
-		"eslint-plugin-prettier": "^4.0.0",
-		"jest": "^29.1.1",
-		"jsdom": "^20.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-prettier": "^4.2.1",
+		"jest": "^29.5.0",
+		"jsdom": "^20.0.3",
 		"node-stdlib-browser": "^1.2.0",
 		"node-testing-server": "^1.5.2",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^2.5.1",
-		"sass": "^1.55.0",
-		"ts-jest": "^29.0.2",
-		"ts-node": "^10.7.0",
-		"typedoc": "^0.23.16",
-		"typescript": "^4.6.2",
-		"vite": "^4.1.1"
+		"prettier": "^2.8.8",
+		"sass": "^1.62.1",
+		"ts-jest": "^29.1.0",
+		"ts-node": "^10.9.1",
+		"typedoc": "^0.23.28",
+		"typescript": "^4.9.5",
+		"vite": "^4.3.5"
 	},
 	"prettier": {
 		"singleQuote": true,
