--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@thencc/algonautjs",
-	"version": "0.3.13",
+	"version": "0.3.14",
 	"description": "AlgonautJS is a simplified Algorand transaction library built specifically for Browsers and Front End Development",
 	"type": "module",
 	"types": "dist/index.d.ts",
@@ -19,9 +19,10 @@
 		"README.md"
 	],
 	"scripts": {
-		"link": "npm link",
-		"link-pnpm": "pnpm link --global",
+		"link": "pnpm link --global",
+		"unlink": "pnpm -g rm @thencc/algonautjs",
 		"link-aw": "pnpm link @thencc/any-wallet --global",
+		"link-ic": "pnpm link @thencc/inkey-client-js --global",
 		"build": "rm -rf dist && run-s build:*",
 		"build:cjs": "node ./esbuild.cjs.js",
 		"build:esm": "node ./esbuild.esm.js",
@@ -48,7 +49,7 @@
 		"url": "git://github.com/thencc/algonautjs"
 	},
 	"dependencies": {
-		"@thencc/any-wallet": "^0.1.26",
+		"@thencc/any-wallet": "^0.1.27",
 		"algosdk": "^2.2.0",
 		"buffer": "^6.0.3"
 	},
@@ -56,14 +57,14 @@
 		"@blockshake/defly-connect": "^1.1.2",
 		"@perawallet/connect": "^1.2.3",
 		"@randlabs/myalgo-connect": "^1.4.2",
-		"@thencc/inkey-client-js": "^0.0.16"
+		"@thencc/inkey-client-js": "^0.0.17"
 	},
 	"devDependencies": {
 		"@blockshake/defly-connect": "^1.1.2",
 		"@jest/globals": "^29.5.0",
 		"@perawallet/connect": "^1.2.0",
 		"@randlabs/myalgo-connect": "^1.4.2",
-		"@thencc/inkey-client-js": "^0.0.15",
+		"@thencc/inkey-client-js": "^0.0.17",
 		"@types/node": "^18.16.5",
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
 		"@typescript-eslint/parser": "^5.59.2",
