upgraded node + pnpm versions in workflow actions

--- a/.github/workflows/npm-publish-beta.yml
+++ b/.github/workflows/npm-publish-beta.yml
@@ -58,14 +58,14 @@ jobs:
       - name: "setup node"
         uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: 16
           registry-url: 'https://registry.npmjs.org'
           # creates an .npmrc
 
       - name: "setup pnpm"
         uses: pnpm/action-setup@v2.2.2
         with:
-          version: 7.9.3
+          version: 8.5.0
           # auto install on use
           run_install: |
               args: [--no-frozen-lockfile, --strict-peer-dependencies]
