--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,7 @@ jobs:
       - name: "setup node"
         uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: 16
           registry-url: 'https://registry.npmjs.org'
           # creates an .npmrc
 
