--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
 		"type": "git",
 		"url": "git://github.com/thencc/algonautjs"
 	},
+	"packageManager": "^pnpm@8.3.1",
 	"dependencies": {
-		"@thencc/any-wallet": "^0.1.86",
+		"@thencc/any-wallet": "^0.1.87",
 		"algosdk": "github:thencc/js-algorand-sdk-no-fetch-poly#1a963de38b4d29b9a4d06bf829c428fc0aa61ce7",
 		"buffer": "^6.0.3"
 	},
@@ -58,23 +59,24 @@
 		"@blockshake/defly-connect": "^1.1.5",
 		"@perawallet/connect": "^1.2.3",
 		"@randlabs/myalgo-connect": "^1.4.2",
-		"@thencc/inkey-client-js": "^0.0.24"
+		"@thencc/inkey-client-js": "^0.0.25"
 	},
 	"devDependencies": {
 		"@blockshake/defly-connect": "^1.1.2",
 		"@jest/globals": "^29.5.0",
 		"@perawallet/connect": "^1.2.0",
 		"@randlabs/myalgo-connect": "^1.4.2",
-		"@thencc/inkey-client-js": "^0.0.24",
-		"@types/node": "^18.16.18",
+		"@thencc/inkey-client-js": "^0.0.25",
+		"@thencc/inkey-types": "^0.0.11",
+		"@types/node": "^20.3.2",
 		"@typescript-eslint/eslint-plugin": "^5.60.1",
 		"@typescript-eslint/parser": "^5.60.1",
 		"dotenv": "^16.3.1",
-		"esbuild": "^0.14.54",
+		"esbuild": "^0.18.10",
 		"eslint": "^8.43.0",
 		"eslint-config-typescript": "^3.0.0",
 		"jest": "^29.5.0",
-		"jsdom": "^20.0.3",
+		"jsdom": "^22.1.0",
 		"node-stdlib-browser": "^1.2.0",
 		"node-testing-server": "^1.5.2",
 		"npm-run-all": "^4.1.5",
@@ -82,8 +84,8 @@
 		"sass": "^1.63.6",
 		"ts-jest": "^29.1.0",
 		"ts-node": "^10.9.1",
-		"typedoc": "^0.23.28",
-		"typescript": "^4.9.5",
+		"typedoc": "^0.24.8",
+		"typescript": "^5.1.5",
 		"vite": "^4.3.9"
 	}
 }
