--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@thencc/algonautjs",
-	"version": "0.3.62",
+	"version": "0.3.63",
 	"description": "AlgonautJS is a simplified Algorand transaction library built specifically for Browsers and Front End Development",
 	"type": "module",
 	"types": "dist/index.d.ts",
@@ -21,14 +21,12 @@
 	"scripts": {
 		"link": "pnpm link --global",
 		"unlink": "pnpm -g rm @thencc/algonautjs",
-		"link-aw": "pnpm link @thencc/any-wallet --global",
-		"link-ic": "pnpm link @thencc/inkey-client-js --global",
+		"link:aw": "pnpm link @thencc/any-wallet --global",
+		"link:ic": "pnpm link @thencc/inkey-client-js --global",
 		"build": "rm -rf dist && run-s build:*",
-		"build:cjs": "node ./esbuild.cjs.js",
-		"build:esm": "node ./esbuild.esm.js",
+		"build:esm-cjs": "tsup --config=tsup.config.ts",
 		"build:types": "tsc --emitDeclarationOnly --outDir dist",
 		"build:docs": "npx typedoc",
-		"build-it:tsup": "tsup --config=tsup.config.ts",
 		"test": "jest",
 		"tests": "cd tests && task prepare-tests && task tests",
 		"lint:eslint": "eslint 'src/**/*.ts'"
@@ -73,21 +71,18 @@
 		"@typescript-eslint/eslint-plugin": "^5.60.1",
 		"@typescript-eslint/parser": "^5.60.1",
 		"dotenv": "^16.3.1",
-		"esbuild": "^0.18.10",
 		"eslint": "^8.43.0",
 		"eslint-config-typescript": "^3.0.0",
 		"jest": "^29.5.0",
 		"jsdom": "^22.1.0",
-		"node-stdlib-browser": "^1.2.0",
-		"node-testing-server": "^1.5.2",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.8.8",
 		"sass": "^1.63.6",
 		"ts-jest": "^29.1.0",
 		"ts-node": "^10.9.1",
+		"tsup": "^6.7.0",
 		"typedoc": "^0.24.8",
 		"typescript": "^5.1.5",
-		"vite": "^4.3.9",
-		"tsup": "^6.7.0"
+		"vite": "^4.3.9"
 	}
 }
